apps/erp/apps/realtime/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: realtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: nginx:stable
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live
  namespace: realtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live
  template:
    metadata:
      labels:
        app: live
    spec:
      containers:
      - name: live
        image: nginx:stable
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet
  namespace: realtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meet
  template:
    metadata:
      labels:
        app: meet
    spec:
      containers:
      - name: meet
        image: nginx:stable
        ports:
        - containerPort: 80
