apps/erp/apps/realtime/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: realtime
spec:
  selector:
    app: chat
  ports:
    - port: 3000
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: live-service
  namespace: realtime
spec:
  selector:
    app: live
  ports:
    - port: 3000
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: meet-service
  namespace: realtime
spec:
  selector:
    app: meet
  ports:
    - port: 8080
      targetPort: 80
