apps/erp/apps/realtime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realtime
  namespace: realtime
spec:
  ingressClassName: traefik
  rules:
  - host: chat.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 3000

  - host: live.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: live-service
            port:
              number: 3000

  - host: meet.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meet-service
            port:
              number: 8080
